conhecendo mais pesudo classes

--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-
-    <div class="pai"  >
-      <h1 primary=   > lorenmoiernoer  </h1>  
+    <input class="check" type="checkbox"  /> 
+    <input class="required" required />
+    <input />
+    <p> Ola mundo</p>
+    <div class ="pai"  >
+      <h1 primary> lorenmoiernoer  </h1>  
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, consequatur voluptas 
             consectetur atque, quo unde veniam facere modi deleniti 
-            voluptatem asperiores fuga explicabo rerum illo corporis. 
+            <a href="#"  > voluptatem </a> asperiores fuga explicabo rerum illo corporis. 
             Aut sed neque maiores.</p>       
           
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, consequatur voluptas 
-           consectetur atque, quo unde veniam facere modi deleniti 
+           <a  href="nunca" > voluptatem  </a> atque, quo unde veniam facere modi deleniti 
            voluptatem asperiores fuga explicabo rerum illo corporis. 
             Aut sed neque maiores.</p>   
        
@@ -29,6 +32,14 @@
             voluptatem asperiores fuga explicabo rerum illo corporis. </p>   
 
     </div>
+    <di class="pai2" >
+       <li> filho1 </li>
+       <li> filho2 </li>
+       <li> filho2 </li>
+       <li> filho2 </li>
+       <li> filho3 </li>
+
+    </di>
 
 </body>
 </html>
